# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.cargo/: config.toml
.github/worflows/: audit.yml
.github/workflows/: general.yml
.sqlx/: query-1776ea34903a498cb068335db4d3c1ad22f083f4fe1437d65c41a888245a82a6.json  query-3a6e9a14e268d4c3a7e42c3505ffa4f34b40503d63429e38ddba6f6102f5b59b.json  query-57a1be7b14d0efbdabcb6fa5a1d7d6bb3ac080e92f5d66763695d4bcdf83a582.json  query-8a6567bdd4a029eb55953d8b0eb1d8d6e26ec0d7c2768e3ae5cba6dd5c33446e.json  query-b7183dfdb4f71e5aee495cd910edda5b6651d2a147fd9ce2565fcea338aedbd0.json  query-d823b7fb92246b0f4d26771194ff2d13ac412ae87dd5daace41718c3c396bc85.json
configuration/: base.yaml  ci.yaml  local.yaml  production.yaml
migrations/: 20250212024025_create_subscriptions_table.sql  20250302142231_make_status_not_null_in_subscriptions.sql  20250304181453_create_users_table.sql  20250304184006_rename_password_column.sql  20250307022811_seed_user.sql  20250314015919_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_valkey.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: midleware.rs  mod.rs
src/domain/: admin_password.rs  mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/templates/: admin-dashboard.tera.html  (+1 more)
templates/: admin-dashboard.html  change-password.html  home.html  login.html  newsletter-editor.html
tests/: health_check.rs
(+21 files in other folders)
