[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.10", features = ["redis-session-native-tls"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.15"
htmlescape = "0.3"
once_cell = "1"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "cookies",
], default-features = false }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
unicode-segmentation = "1"
urlencoding = "2"
validator = "0.20"

[dev-dependencies]
fake = "4.0"
claims = "0.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6"
linkify = "0.10"
